Manifests/Todoist-Reclaim-Webhook/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: todoist-webhook
  name: todoist-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoist-webhook
  strategy: {}
  template:
    metadata:
      labels:
        app: todoist-webhook
    spec:
      containers:
      - image: tanchwa/todoist-reclaim-webhook:latest
        ports:
        - containerPort: 5000
          protocol: TCP
        name: todoist-reclaim-webhook
