Manifests/Todoist-Reclaim-Webhook/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "cloudflare-issuer"
  name: todoist-webhook-ingress-public
spec:
  ingressClassName: public-nginx
  tls:
  - hosts:
      - schedule.andrewsutliff.com
    secretName: todoist-http-tls
  rules:
  - host: "schedule.andrewsutliff.com"
    http:
      paths:
      - backend:
          service:
            name: todoist-webhook
            port:
              number: 5000
        path: /
        pathType: Prefix
